--- a/index.css
+++ b/index.css
@@ -12,7 +12,109 @@
         The <div> which is the first child of the <header> must also (on screens with a minimum width of 800px) be a grid, with two rows set of 'max-content' height and an auto number of columns
 
         The <div> inside that div, containing two paragraphs with the text "CSS Flexbox is a one-dimensional...", and "CSS Grid is a two-dimensional..." must (on screens with a minimum width of 800px) also be a grid with an 'auto' number of rows and two columns of 1fr. Additionally it must have a gap between the columns of width 2em
+*/
 
+/* footer */
+
+footer a div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+footer a div img{
+    order: 1;   
+}
+
+footer a div p {
+    order: 2;
+    width: max-content;
+    
+}
+
+@media screen and (min-width: 800px) {
+    header{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    header > div:first-child{
+        display: grid;
+        grid-template-rows: max-content max-content;
+    }
+
+    header > div:first-child > div{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    /* section id="flexbox" */
+    #flexbox h2{
+        font-size: 6em;
+    }
+
+    /* section id="grid" */
+    section#grid{
+        display: grid;
+        grid-template-rows: auto repeat(4, 250px);
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    section#grid > {
+        padding: 1em;
+    }
+
+    section#grid h2{
+        grid-column: 1 / span 3;
+        font-size: 6em;
+        text-align: right;
+    }
+
+    section#grid p:nth-child(2){
+        grid-column: 1 / span 2;
+    }
+
+    section#grid > div{
+        grid-column: 2 / span 2;
+        grid-row: 3 / span 3;
+    }
+
+    /* footer */
+    footer a div{
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 4em;
+
+    }
+
+    footer a div p{
+        order: 1;
+        margin-top: 0;
+        flex-basis: 90%;
+    }
+
+    footer a div img{
+        order: 2;   
+    }
+
+}
+
+
+#flexbox{
+    display: flex;
+    flex-direction: column;
+}
+
+#flexbox #canvas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+/*
     <section id="flexbox">
 
         The <section> element with id 'flexbox' must be display: flex with its child elements laid out in a column
@@ -20,7 +122,13 @@
         The <div> with id 'canvas' inside the section must be display: flex with its single child element vertically and horizontally centered
 
         The <h2> inside the section must (on screens with a minimum width of 800px) have a font size of 6em
+*/
 
+
+
+
+
+/*
     <section id="grid">
 
         NOTE: All of the styles noted below must *only* be applied on screens with a minimum width of 800px
@@ -34,6 +142,7 @@
         The first <p> element inside the section must span two columns
 
         The <div> inside the section must start at column two and span two columns, start at row three and span three columns
+
 
     <footer>
 
